--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: survDeconvolution
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Survival Deconvolution
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Author: Marlena Bannick
+Maintainer: Marlena Bannick <mnorwood@uw.edu>
+Description: Uses statistical deconvolution methods to parse apart survival functions.
 License: MIT
 Encoding: UTF-8
 LazyData: true
+Suggests: 
+    testthat
