--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,8 @@ LazyData: true
 Imports:
     MASS,
     distrEx,
-    parallel
+    parallel,
+    stats
 Suggests: 
     testthat
 RoxygenNote: 6.1.1
