Added data simulate function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,8 @@ importFrom(optimx,optimx)
 importFrom(parallel,mclapply)
 importFrom(stats,dgamma)
 importFrom(stats,dweibull)
+importFrom(data.table,data.table)
+importFrom(data.table,as.data.table)
+importFrom(data.table,setnames)
+importFrom(survival,Surv)
+importFrom(survival,survfit)
