--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,9 @@ Imports:
     distrEx,
     parallel,
     stats,
-    optimx
+    optimx,
+    data.table,
+    survival
 Suggests: 
     testthat
 RoxygenNote: 6.1.1
