--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ Imports:
     stats,
     optimx,
     data.table,
-    survival
+    survival,
+    magrittr
 Suggests: 
     testthat
 RoxygenNote: 6.1.1
