Updated package dependencies.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,4 +10,6 @@ importFrom(data.table,data.table)
 importFrom(data.table,as.data.table)
 importFrom(data.table,setnames)
 importFrom(survival,Surv)
-importFrom(survival,survfit)
+importFrom(survival,survfit,survreg)
+importFrom(stats,coef,rexp,rgamma,rweibull)
+importFrom(magrittr,"%>%")
